se agrega la navegacion de la apliacacion

--- a/app.json
+++ b/app.json
@@ -21,10 +21,23 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
+      },
+      "config": {
+        "googleMaps": {
+          "apiKey": "AIzaSyC-gop3ReQ3fq7NtYVZ34CqB7pQ2RPNJfI"
+        }
       }
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "plugins": [
+      [
+        "expo-location",
+        {
+          "locationAlwaysAndWhenInUsePermission": "$(PRODUCT_NAME) quiere acceder a tu ubicación."
+        }
+      ]
+    ]
   }
 }
