--- a/package.json
+++ b/package.json
@@ -15,15 +15,18 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.16",
     "expo": "^49.0.16",
+    "expo-location": "~16.1.0",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-maps": "1.7.1",
     "react-native-reanimated": "~3.3.0",
+    "react-native-redash": "10.1.1",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-snap-carousel": "^3.9.1",
+    "react-native-scroll-bottom-sheet": "^0.7.0",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
