--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
     "react-native-drawer-layout": "^3.2.2",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-maps": "1.7.1",
+    "react-native-pager-view": "^6.2.2",
     "react-native-reanimated": "~3.3.0",
     "react-native-redash": "10.1.1",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-scroll-bottom-sheet": "^0.7.0",
+    "react-native-tab-view": "^3.5.2",
     "react-native-web": "~0.19.6",
     "react-redux": "^8.1.3",
     "redux": "^4.2.1",
