--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
-    "@react-native-async-storage/async-storage": "^1.19.5",
+    "@react-native-async-storage/async-storage": "^1.18.2",
     "@react-native-firebase/app": "^18.6.1",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/drawer": "^6.6.6",
@@ -26,7 +26,8 @@
     "react-native-drawer-layout": "^3.2.2",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-maps": "1.7.1",
-    "react-native-pager-view": "^6.2.2",
+    "react-native-pager-view": "^6.2.0",
+    "react-native-paper": "^5.11.2",
     "react-native-reanimated": "~3.3.0",
     "react-native-redash": "10.1.1",
     "react-native-safe-area-context": "4.6.3",
