--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
-    "@react-native-async-storage/async-storage": "^1.18.2",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-firebase/app": "^18.6.1",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/drawer": "^6.6.6",
@@ -19,14 +19,14 @@
     "expo": "^49.0.16",
     "expo-location": "~16.1.0",
     "expo-status-bar": "~1.6.0",
-    "firebase": "^10.6.0",
+    "firebase": "^10.7.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
     "react-native-drawer-layout": "^3.2.2",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-maps": "1.7.1",
-    "react-native-pager-view": "^6.2.0",
+    "react-native-pager-view": "6.2.0",
     "react-native-paper": "^5.11.2",
     "react-native-reanimated": "~3.3.0",
     "react-native-redash": "10.1.1",
@@ -37,7 +37,8 @@
     "react-native-web": "~0.19.6",
     "react-redux": "^8.1.3",
     "redux": "^4.2.1",
-    "redux-thunk": "^2.4.2"
+    "redux-thunk": "^2.4.2",
+    "expo-image-picker": "~14.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
